--- a/traning.html
+++ b/traning.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>문서의 제목란</title>
 </head>
 <body>
-    
+    <h1>"h1" 태그 사이즈의 제목</h1>
+    <h2>"h2" 태그 사이즈의 제목</h2>
+    <h3>"h3" 태그 사이즈의 제목</h3>
+    <h4>"h4" 태그 사이즈의 제목</h4>
+    <h5>"h5" 태그 사이즈의 제목</h5>
+    <h6>"h6" 태그 사이즈의 제목</h6>
+    <hr color="purple" size="3">
+    수평선을 긋고 싶을 땐 "hr" 단일태그를 사용<br>
+    color 속성이나 size 속성을 이용해 색상이나 두께를 조절할 수 있음<br>
+    (color 속성에는 색깔 이름을, size 속성에는 픽셀 단위의 숫자를 입력한다.)
+    <p>문단을 나타낼 때에는 "p" 태그를 사용</p>
+
+    <p>(하나의 문단에는 일정한 여백이 형성되어 화면 상에서 구분하기가 용이)</p>
+
+    <p>
+        줄바꿈이 필요할 땐 엔터 키대신 "br" 단일태그를 사용<br>
+    <i>"i" 태그는 기울이기</i><br>
+    <em>"em" 태그는 기울이기</em><br>
+    <strong>"strong" 태그는 강조(굵게)</strong><br>
+    <mark>형광펜 효과를 주고 싶을 땐 "mark" 태그 사용</mark>
+    </p> 
+    공백을 연달아 표시하고 싶을 때는 공백을 나타내는 "&nb sp;"라는 엔티티 코드를 사용한다( " 중간 공백은 원래 없어야함!! " 웹에 표시위해 공백넣음) <br><br>
+
+    들여쓰기를 해볼까 합니다.
+    <blockquote>들여쓰기를 할때에는 "blockquote" 태그를 사용합니다!</blockquote>
+    텍스트 필드를 사용하고 싶을 때 <textarea name="" id=""> "textarea"</textarea> 태그를 사용한다. <br>
+    * 단일태그 = 닫는 태그가 필요하지 않은 태그
+    <pre>dkgoago snoagn           saognao      aags
+        agia
+        ahadfdfhadohdaoha
+
+이런식으로 아무렇게나 작성해도 그대로 보이게 하고 싶을 땐 "pre"태그를 사용한다.
+    </pre>
 </body>
 </html>
