--- a/traning.html
+++ b/traning.html
@@ -4,40 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문서의 제목란</title>
+    <style> h1 {
+            color: blue;
+            text-align: center;
+        }
+        p {
+            background-color: lightgray;
+            padding: 10px;
+        }</style>
 </head>
-<body>
+<body style="background-color: bisque;">
     <h1>"h1" 태그 사이즈의 제목</h1>
     <h2>"h2" 태그 사이즈의 제목</h2>
     <h3>"h3" 태그 사이즈의 제목</h3>
     <h4>"h4" 태그 사이즈의 제목</h4>
     <h5>"h5" 태그 사이즈의 제목</h5>
     <h6>"h6" 태그 사이즈의 제목</h6>
+
     <hr color="purple" size="3">
+
     수평선을 긋고 싶을 땐 "hr" 단일태그를 사용<br>
     color 속성이나 size 속성을 이용해 색상이나 두께를 조절할 수 있음<br>
     (color 속성에는 색깔 이름을, size 속성에는 픽셀 단위의 숫자를 입력한다.)
+
     <p>문단을 나타낼 때에는 "p" 태그를 사용</p>
 
     <p>(하나의 문단에는 일정한 여백이 형성되어 화면 상에서 구분하기가 용이)</p>
 
     <p>
         줄바꿈이 필요할 땐 엔터 키대신 "br" 단일태그를 사용<br>
-    <i>"i" 태그는 기울이기</i><br>
-    <em>"em" 태그는 기울이기</em><br>
-    <strong>"strong" 태그는 강조(굵게)</strong><br>
-    <mark>형광펜 효과를 주고 싶을 땐 "mark" 태그 사용</mark>
-    </p> 
+        <hr>
+        <i>"i" 태그는 기울이기</i><br>
+        <em>"em" 태그는 기울이기</em><br>
+        <strong>"strong" 태그는 강조(굵게)</strong><br>
+        <mark style="color: brown;">형광펜 효과를 주고 싶을 땐 "mark" 태그 사용</mark>
+    </p>
+
     공백을 연달아 표시하고 싶을 때는 공백을 나타내는 "&nb sp;"라는 엔티티 코드를 사용한다( " 중간 공백은 원래 없어야함!! " 웹에 표시위해 공백넣음) <br><br>
 
     들여쓰기를 해볼까 합니다.
     <blockquote>들여쓰기를 할때에는 "blockquote" 태그를 사용합니다!</blockquote>
+
     텍스트 필드를 사용하고 싶을 때 <textarea name="" id=""> "textarea"</textarea> 태그를 사용한다. <br>
-    * 단일태그 = 닫는 태그가 필요하지 않은 태그
+    <mark>* 단일태그 = 닫는 태그가 필요하지 않은 태그</mark>
+
     <pre>dkgoago snoagn           saognao      aags
         agia
         ahadfdfhadohdaoha
 
-이런식으로 아무렇게나 작성해도 그대로 보이게 하고 싶을 땐 "pre"태그를 사용한다.
+이런식으로 아무렇게나 작성해도 그대로 보이게 하고 싶을 땐 <strong>"pre"태그를 사용</strong>한다.
     </pre>
+
+    <div>
+        <p>블록 레벨의 컨테이너 요소를 만드는 태그</p>
+        <p>"div"태그를 사용한답니다!</p>
+        <p>컨테이너 요소는 '영역을 구분하는' 역할을 하기 위해 주로 사용되곤 합니다.</p>
+        <p>인라인 레벨의 컨테이너를 만드는 태그</p>
+        <p><span>"span"태그</span>를 사용한답니다!</p>
+    </div>
+
+    <hr>
+
+   
+<h3>전역 속성에 대하여 알아봅시다!</h3> <br>
+<p><pre>
+<strong>전역 속성(Global attributes)</strong>이란 모든 HTML 태그에서 공통적으로 사용할 수 있는 속성을 말합니다.
+전역 속성은 그 종류가 무척 다양하지만, 사용 빈도가 높은 것이 있는 반면 거의 사용되지 않는 속성들도 다수 존재하기 때문에
+사용자가 모든 전역 속성을 알고 있을 필요는 없습니다.
+다음 세 가지 속성은 사용 빈도가 무척 높은 대표적인 전역 속성들입니다.
+<strong>
+id : 요소에 고유한 이름을 부여하는 식별자 역할을 함
+class : 요소를 그룹 별로 묶을 수 있는 식별자 역할을 함
+title : 요소에 대한 추가 정보를 기입할 수 있는 텍스트 속성으로, 사용자에게 툴팁을 제공함
+</strong>
+</pre></p>
+
+<hr>
+
+<p><pre>
+<h4>고유한 식별자, id</h4>
+<strong>id 속성</strong>은 스크립트 및 스타일 적용 시 특정 요소를 식별하기 위해
+요소에 대한 고유식별자를 지정합니다. 하나의 요소는 하나의 id를 가질 수 있으며,
+각 요소에 대한 id는 고유한 값이어야 하며 id가 지정된 요소를 식별한 다음
+스타일시트(CSS)나 스크립트(JavaScript)를 추가하곤 합니다.
+
+기본적으로 id의 값은 사용자가 자유롭게 정할 수 있습니다.
+그러나 공백(스페이스나 탭 등)을 포함해서는 안되며,
+문자나 숫자, 하이픈(-)과 언더스코어(_) 등의 기호를 사용해서 작성해주어야 하는 등 몇몇 제약사항도 존재합니다.
+</pre></p>        
+
+<hr>
+
+<p><pre>
+<h4>그룹화 식별자, class</h4>
+<strong>class 속성</strong>은 여러 요소에 같은 이름의 식별자를 지정하여 요소를 그룹화할 수 있는 식별자입니다.
+id와 달리 각 요소가 고유한 값을 가지지 않아도 됩니다.
+또한 id와 마찬가지로 스크립트 및 스타일 적용 시 특정 요소를 식별하기 위해 사용하곤 합니다.
+
+<strong>class 속성</strong>은 하나의 요소가 여러 개의 식별자를 가질 수 있습니다.
+만일 요소가 두 개 이상의 class 값을 가지길 원한다면,
+공백을 이용해 값을 서로 구분해주어야 합니다.
+class의 값 역시 id의 값처럼 사용자가 자유롭게 정할 수 있습니다.
+</pre></p>
+
+<hr>
+
+<p><pre>
+<h4 style="color: red; font-size: 18px; font-weight: bold;">요소를 설명하는 추가 텍스트, title</h4>
+<strong>title 속성</strong>은 요소와 관련된 추가 정보를 제공하는 텍스트를 나타냅니다.
+요소에 title을 추가하면, 
+렌더링 되고 난 후의 결과물에 마우스를 얹었을 때 툴팁(tooltip)이 나타나게 됩니다..
+
+<strong>* 툴팁이란 커서를 얹었을 때 나타나는 도움말을 뜻합니다.</strong>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSt52tiQR0kT2lpQ0dDWQGOabiOfpYzWbiiT5Ny0b3bYldFqVxsMaB2Fu2V0v8JAmD4rdU8HQ" height="300" width="200">
+<img src="https://occ-0-8407-2218.1.nflxso.net/dnm/api/v6/Z-WHgqd_TeJxSuha8aZ5WpyLcX8/AAAABT_zG2_zJgTcL4BNM1cDoqClP7u9IrtJhwCQGghJRhvOjgFtwmH_lOlP-SlTXis6Fpk7WSf3JSa2kg9XRGaPyx38k_D2brHtMG4Q.jpg?r=048" height="300" width="550">
+</pre></p>
 </body>
 </html>
