--- a/my-first-webpage/my-first-webpage.html
+++ b/my-first-webpage/my-first-webpage.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>수줍은 잡화점</title>
+  </head>
+  <body>
+    <a href="http://127.0.0.1:5500/my-first-webpage/my-first-webpage_1.html"
+      >1. HTML 알아보기!
+    </a>
+    <br />
+    <a href="http://127.0.0.1:5500/my-first-webpage/my-first-webpage_2.html"
+      >2. CSS 알아보기!
+    </a>
+    <br />
+    3. JavaScript 알아보기!
+  </body>
 </html>
