--- a/my-first-webpage/my-first-webpage_2.html
+++ b/my-first-webpage/my-first-webpage_2.html
@@ -4,28 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>그해 우리는</title>
     <style>
-        body { background-color:lightBlue; }
+        body { background-image: url('https://occ-0-8407-2218.1.nflxso.net/dnm/api/v6/Z-WHgqd_TeJxSuha8aZ5WpyLcX8/AAAABT_zG2_zJgTcL4BNM1cDoqClP7u9IrtJhwCQGghJRhvOjgFtwmH_lOlP-SlTXis6Fpk7WSf3JSa2kg9XRGaPyx38k_D2brHtMG4Q.jpg?r=048' )
+    }
         #snow{
             background: none;
             font-family: Androgyne;
-            background-image: url('https://occ-0-8407-2218.1.nflxso.net/dnm/api/v6/Z-WHgqd_TeJxSuha8aZ5WpyLcX8/AAAABT_zG2_zJgTcL4BNM1cDoqClP7u9IrtJhwCQGghJRhvOjgFtwmH_lOlP-SlTXis6Fpk7WSf3JSa2kg9XRGaPyx38k_D2brHtMG4Q.jpg?r=048' ), url('https://i.pinimg.com/originals/d9/8f/ea/d98fea1d8e5d2ef7f844aa8c0a501dd7.jpg'), url('https://cdn.dailysecu.com/news/photo/202104/123449_145665_1147.png');
-            height: 100%;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index:1;
-            -webkit-animation: snow 1000s linear infinite;
-            -moz-animation: snow 1000s linear infinite;
-            -ms-animation: snow 1000s linear infinite;
-            animation: snow 1000s linear infinite;
-            -webkit-transform: translate3d(0,0,0);
-            -moz-transform: translate3d(0,0,0);
-            -ms-transform: translate3d(0,0,0);
-            -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+            background-image: url('https://occ-0-8407-2218.1.nflxso.net/dnm/api/v6/Z-WHgqd_TeJxSuha8aZ5WpyLcX8/AAAABT_zG2_zJgTcL4BNM1cDoqClP7u9IrtJhwCQGghJRhvOjgFtwmH_lOlP-SlTXis6Fpk7WSf3JSa2kg9XRGaPyx38k_D2brHtMG4Q.jpg?r=048' )
+           
         }
         @keyframes snow {
           0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
@@ -45,8 +32,9 @@
         }   
     </style>
 </head>
-<body>
+<body><h1 id="name">dhsh</h1>
     <div id="snow">
+        <div id="name"></div>
 </div>
 </body>
 </html>
