--- a/traning/traning.html
+++ b/traning/traning.html
@@ -13,6 +13,7 @@
             padding: 10px;
         }</style>
 </head>
+
 <body style="background-color: bisque;">
     <h1>"h1" 태그 사이즈의 제목</h1>
     <h2>"h2" 태그 사이즈의 제목</h2>
@@ -105,6 +106,15 @@ id와 달리 각 요소가 고유한 값을 가지지 않아도 됩니다.
 만일 요소가 두 개 이상의 class 값을 가지길 원한다면,
 공백을 이용해 값을 서로 구분해주어야 합니다.
 class의 값 역시 id의 값처럼 사용자가 자유롭게 정할 수 있습니다.
+
+변수 = let
+상수 = const
+결과 출력(print) = console.log
+<script>
+ function sayHello() {
+ document.getElementById('message').innerHTML = '안녕하세요! JavaScript입니다!';
+ }
+ </script>
 </pre></p>
 
 <hr>
