--- a/my-first-webpage/my-first-webpage.html
+++ b/my-first-webpage/my-first-webpage.html
@@ -6,14 +6,12 @@
     <title>수줍은 잡화점</title>
   </head>
   <body>
-    <a href="http://127.0.0.1:5500/my-first-webpage/my-first-webpage_1.html"
-      >1. HTML 알아보기!
-    </a>
-    <br />
-    <a href="http://127.0.0.1:5500/my-first-webpage/my-first-webpage_2.html"
-      >2. CSS 알아보기!
-    </a>
-    <br />
-    3. JavaScript 알아보기!
+    <nav>
+      <ul>
+        <li><a href="my-first-webpage_1.html">1. HTML 알아보기! </a></li>
+        <li><a href="my-first-webpage_2.html">2. CSS 알아보기! </a></li>
+        <li>3. JavaScript 알아보기!</li>
+      </ul>
+    </nav>
   </body>
 </html>
