--- a/my-first-webpage/my-first-webpage_1.html
+++ b/my-first-webpage/my-first-webpage_1.html
@@ -17,7 +17,20 @@
       HTML 마스터하기
     </h1>
     <hr />
-    <h2>HTML 태그의 기본 구조</h2>
+    <ul></ul>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">1. HTML '일반태그' 모음</a>
+    <li><a href="#HTML 태그의 기본 구조">1.1 문서 구조 및 기본</a></li>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <a href="#HTML 태그의 기본 구조">HTML 태그의 기본 구조</a>
+    <hr />
+    <h2 id="HTML 태그의 기본 구조">HTML 태그의 기본 구조</h2>
     <pre style="font-size: 150%; font-weight: bold">
 <mark style="background-color: rgba(194, 255, 138, 0.527)">&lt;태그명 속성="값"&gt;내용&lt;/태그명&gt;</mark>
 <mark style="background-color: rgba(194, 255, 138, 0.527)">여는 태그: &lt;태그명&gt;</mark>
@@ -26,7 +39,7 @@
 <mark style="background-color: rgba(194, 255, 138, 0.527)">내용: 태그 사이에 들어가는 실제 콘텐츠</mark>                                   
      </pre>
     <hr />
-    <h2>HTML "일반태그" 모음</h2>
+    <h2 id="HTML '일반태그' 모음">HTML '일반태그' 모음</h2>
     <pre style="font-size: 140%; font-weight: bold">
 일반 HTML 태그는 크게 여러 그룹으로 나눌 수 있다.
 일반 태그는 시작 태그와 닫는 태그로 구성되며, 그 사이에 콘텐츠를 담는다.
@@ -34,11 +47,18 @@
     >
     <ul>
       <h2><strong>문서 구조 및 기본</strong></h2>
-      <li>&lt;html&gt; : HTML 문서의 최상위(루트) 요소</li>
       <li>
-        &lt;head&gt; : 문서의 메타데이터를 포함하며, 브라우저에 정보를 전달
+        &lt;!DOCTYPE html&gt; : "이 문서는 HTML5로 작성되었어요!"라고
+        브라우저에게 알려주는 선언문
       </li>
-      <li>&lt;title&gt; : 웹 페이지의 제목을 정의합니다. 브라우저 탭에 표시</li>
+      <li>&lt;html&gt; : HTML 문서의 모든 내용을 감싸는 최상위 요소</li>
+      <li>
+        &lt;head&gt; : 사용자에게는 보이지 않지만 중요한 정보들이 들어가는 곳,
+        문서의 메타데이터를 포함하며 브라우저에 정보를 전달
+      </li>
+      <li>
+        &lt;title&gt; : 웹 페이지의 제목을 정의합니다. 브라우저 탭에 표시될 제목
+      </li>
       <li>&lt;body&gt; : 웹 페이지에 표시되는 모든 콘텐츠(본문)를 담는 태그</li>
 
       <h2>
@@ -50,19 +70,27 @@
         제목이며, &lt;h6&gt;가 가장 덜 중요한 제목이다. (그냥 크기차이)
       </li>
       <li>&lt;p&gt; : 문단을 정의(문단 영역을 구분해줌)</li>
+      <li>&lt;q&gt; : 짧은 인용문을 문장 안에 포함 (일반적인 따옴표 역할)</li>
       <li>&lt;a&gt; : 하이퍼링크(클릭시 지정된 위치이동)를 만들어줌</li>
       <li>
-        &lt;span&gt; : 인라인 요소를 묶는 데 사용되며 특별한 의미는 없음(영역
-        구분용도)
+        &lt;span&gt; : 인라인 요소로, 텍스트의 일부분만 감쌀 때 사용되며 특별한
+        의미는 없음(영역 구분용도)
       </li>
       <li>
-        &lt;div&gt; : 블록 레벨 요소를 묶는 데 사용되며 특별한 의미는 없음(영역
-        구분용도)
+        &lt;div&gt; : 블록 레벨 컨테이너, 큰 영역을 나누는 용도. 웹페이지의
+        섹션을 구분할 때 사용되며 특별한 의미는 없음(영역 구분용도)
       </li>
       <li>&lt;strong&gt; : 중요한 텍스트를 강조(굵게 표시)</li>
       <li>&lt;em&gt; : 텍스트의 중요성을 강조(기울게 표시)</li>
-      <li>&lt;blockquote&gt; : 인용 블록을 정의(들여쓰기 + 문단영역 구분)</li>
-
+      <li>&lt;code&gt; : 짧은 코드나 명령어를 인라인으로 표시</li>
+      <li>
+        &lt;blockquote&gt; : 긴 인용문을 독립된 블록으로 표시(들여쓰기 +
+        문단영역 구분)
+      </li>
+      <li>
+        &lt;pre&gt; : 긴 코드 블록을 원본 형태 그대로 표시 (공백과 줄바꿈 유지)
+      </li>
+      <li>&lt;cite&gt; : 인용 출처 표시</li>
       <h2>
         <strong>시맨틱 구조</strong>
         <h5>
@@ -107,23 +135,24 @@
 
       <h2><strong>표(테이블) 관련</strong></h2>
 
-      <li>&lt;table&gt; : 표를 정의.</li>
-      <li>&lt;thead&gt; : 테이블의 헤더 부분 정의</li>
-      <li>&lt;tbody&gt; : 테이블의 본문 부분 정의</li>
+      <li>&lt;table&gt; : 전체 테이블을 감싸는 컨테이너</li>
+      <li>&lt;thead&gt; : 테이블 머리글 영역 (제목 행들을 묶어줌)</li>
+      <li>&lt;tbody&gt; : 테이블 본문 영역 (실제 데이터들이 들어가는 곳)</li>
       <li>&lt;tfoot&gt; : 테이블의 바닥글 부분 정의</li>
-      <li>&lt;tr&gt; : 테이블의 한 행을 정의</li>
-      <li>&lt;th&gt; : 테이블의 헤더 셀을 정의</li>
-      <li>&lt;td&gt; : 테이블의 일반 데이터 셀을 정의</li>
+      <li>&lt;tr&gt; : 테이블의 한 행</li>
+      <li>&lt;th&gt; : 제목 셀 (굵게 표시되고 가운데 정렬)</li>
+      <li>&lt;td&gt; : 일반 데이터 셀</li>
       <li>&lt;caption&gt; : 테이블의 캡션을 정의</li>
 
       <h2><strong>목록 관련</strong></h2>
 
-      <li>&lt;ul&gt; : 표를 정의.</li>
-      <li>&lt;ol&gt; : 테이블의 헤더 부분 정의</li>
-      <li>&lt;li&gt; : 테이블의 본문 부분 정의</li>
       <li>
-        &lt;dl&gt;, &lt;dt&gt;, &lt;dd&gt; : 정의 목록을 정의하며, &lt;dt&gt;는
-        용어, &lt;dd&gt;는 용어에 대한 설명을 정의한다.
+        &lt;ul&gt; : 순서 없는 목록 (순서가 중요하지 않은 목록을 만들 때 사용)
+      </li>
+      <li>&lt;ol&gt; : 순서 있는 목록 (순서가 중요한 목록을 만들 때 사용)</li>
+      <li>
+        &lt;li&gt; : 목록의 각 항목 (&lt;ul&gt;이나 &lt;ol&gt; 안에서만 사용할
+        수 있음, 단일사용 절대불가)*점 목록*
       </li>
     </ul>
 
@@ -138,7 +167,7 @@ XHTML과의 호환성을 위해 붙이기도 함</pre
     <ul>
       <h2><strong>시각 및 구조</strong></h2>
       <li>&lt;br&gt; : 줄바꿈 (엔터의 역할)</li>
-      <li>&lt;hr&gt; : 수평선을 그어 내용을 구분</li>
+      <li>&lt;hr&gt; : 주제 전환이나 내용 구분을 위한 의미론적 수평 구분선</li>
       <li>&lt;img&gt; : 이미지를 삽입</li>
 
       <h2><strong>멀티미디어 관련</strong></h2>
@@ -191,5 +220,167 @@ XHTML과의 호환성을 위해 붙이기도 함</pre
       & lt;/내용 & gt;" </mark
     ><br />
     (단일태그 아님 즉, 열고 닫아야함, 두번째 &앞에 내용넣기)
+
+    <hr />
+    <h2>HTML "속성" 모음</h2>
+    <pre style="font-size: 140%; font-weight: bold">
+HTML 속성은 HTML 요소의 시작 태그에 추가 정보를 제공하는 데 사용됩니다. 속성은 속성명="값"의 형태로 작성되며, 요소의 동작 방식이나 표시되는 모습을 제어합니다. 
+HTML 속성은 크게 **전역 속성(Global Attributes)**과 **특정 태그 전용 속성(Element-specific Attributes)**으로 나눌 수 있습니다. 
+</pre
+    >
+
+    <ul>
+      <h2>
+        <strong id="전역속성">전역 속성 (Global Attributes)</strong>
+        <h5>대부분의 HTML 요소에 공통으로 사용할 수 있는 속성</h5>
+      </h2>
+
+      <li>
+        id : 문서 내에서 요소를 고유하게 식별하는 데 사용하며 주로 CSS로 특정
+        요소를 스타일링하거나 자바스크립트로 조작할 때 사용한다.
+      </li>
+      <li>
+        class : 요소에 하나 이상의 클래스 이름을 지정하며 여러 요소에 동일한
+        클래스 이름을 부여하여 CSS로 한 번에 스타일을 적용하거나 자바스크립트로
+        제어할 때 사용한다.
+      </li>
+      <li>
+        style : 요소에 인라인(inline) CSS 스타일을 직접 적용한다. style="color:
+        red; font-size: 16px;"와 같이 사용한다.
+      </li>
+      <li>
+        title : 요소에 대한 추가 정보를 제공한다. 마우스를 요소 위에 올리면 도구
+        설명(tooltip) 형태로 나타난다.
+      </li>
+      <li>
+        lang : 요소의 언어를 지정합니다. lang="ko"는 한국어, lang="en"은 영어를
+        의미. 주로 &lt;html&gt; 태그에 사용한다.
+      </li>
+      <li>
+        dir : 텍스트의 방향을 지정한다. ltr(왼쪽에서 오른쪽) 또는 rtl(오른쪽에서
+        왼쪽) 값을 가진다.
+      </li>
+      <li>
+        data-* : 사용자 지정 데이터를 저장하기 위해 사용된다. 자바스크립트에서
+        접근할 수 있는 사용자 정의 속성이다.
+      </li>
+      <li>
+        tabindex : 요소의 탭 순서를 지정한다. 키보드 탭 키로 요소에 접근하는
+        순서를 제어한다.
+      </li>
+      <li>hidden : 요소가 렌더링되지 않도록 숨긴다.</li>
+      <li>
+        contenteditable : 사용자가 요소의 콘텐츠를 편집할 수 있는지 지정한다.
+      </li>
+      <br />
+
+      <strong>+ 추가 전역속성(조금 더 세부적인 전역속성)</strong>
+      <li>accesskey : 요소에 포커스를 맞추는 단축키를 지정한다.</li>
+      <li>
+        draggable : 요소를 드래그할 수 있는지 지정하며 주로 자바스크립트 드래그
+        앤 드롭 API와 함께 사용된다.
+      </li>
+      <li>dropzone : 드래그된 요소가 드롭될 때의 동작을 지정한다.</li>
+      <li>spellcheck : 요소의 맞춤법 검사 여부를 지정한다.</li>
+      <li>
+        translate : 요소의 내용이 페이지가 번역될 때 번역될지 여부를 지정한다.
+      </li>
+      <li>autofocus : 페이지 로드 시 해당 요소에 자동으로 포커스를 맞춘다.</li>
+      <li>
+        inert : 요소와 그 하위 요소에 대한 사용자 상호작용(클릭, 포커스 등)을
+        비활성화한다.
+      </li>
+      <br />
+      <hr />
+
+      <h2>
+        <strong>특정 태그 전용 속성 </strong>
+        <h5>
+          특정 태그에서만 사용되거나, 특정 태그에 따라 의미가 달라지는 속성
+        </h5>
+      </h2>
+
+      <strong>하이퍼링크 &lt;a&gt;, &lt;area&gt;</strong>
+      <li>href : 링크의 목적지 URL을 지정한다.</li>
+      <p>
+        <li>
+          target : 링크된 문서를 여는 방법을 지정한다. <br />
+          1. _self(현재 창에 연다.(기본값)) <br />
+          2. _blank(새 창이나 탭에 연다.) <br />
+          3. _parent(부모 프레임에 연다.) <br />
+          4. _top(최상위 프레임에 연다.) <br />
+          등의 값을 가진다.
+        </li>
+      </p>
+      <li>
+        rel : 현재 문서와 링크된 문서 사이의 관계를 지정합니다. nofollow,
+        noopener 등의 값을 가진다.
+      </li>
+      <li>
+        download: 링크를 클릭했을 때 연결된 리소스를 다운로드하도록 지정한다.
+      </li>
+      <li>hreflang: 링크된 문서의 언어를 지정한다.</li>
+      <li>media: 링크된 문서가 최적화된 미디어/장치 유형을 지정한다.</li>
+      <br />
+
+      <strong>이미지 &lt;img&gt;</strong>
+      <li>src: 표시할 이미지의 경로를 지정한다</li>
+      <li>
+        alt : 이미지를 볼 수 없을 때 대신 보여줄 텍스트이다. 시각장애인을 위한
+        스크린 리더나 이미지 로딩 실패 시에 사용된다.
+      </li>
+      <li>width, height : 이미지의 너비와 높이를 픽셀 단위로 지정한다.</li>
+      <li>loading : 이미지를 로드하는 방식을 지정한다. (lazy 또는 eager)</li>
+      <br />
+
+      <strong>폼 요소 &lt;input&gt;, &lt;form&gt; 등</strong>
+      <li>
+        type : &lt;input&gt; 요소의 종류(텍스트, 비밀번호, 라디오 버튼, 체크박스
+        등)를 지정한다.
+      </li>
+      <li>name : 폼 데이터를 전송할 때, 데이터의 이름을 지정한다.</li>
+      <li>value : 폼 요소의 초기값을 지정한다.</li>
+      <li>placeholder : 입력 필드에 입력할 값에 대한 힌트를 제공한다.</li>
+      <li>required : 해당 필드를 필수 항목으로 지정한다.</li>
+      <li>action : 폼이 제출될 때 데이터를 보낼 URL을 지정한다.</li>
+      <li>method : 폼 데이터를 전송할 HTTP 메서드(GET 또는 POST)를 지정한다</li>
+      <br />
+
+      <strong>+ 추가 폼 요소 속성(조금 더 세부적인 폼 속성)</strong>
+      <li>autocomplete : 폼 필드의 자동완성 기능 여부를 지정한다.</li>
+      <li>
+        form : &lt;input&gt;, &lt;buttone&gt; 등 폼 요소가 속한 &lt;form&gt;의
+        id를 지정하여, &lt;form&gt; 태그 외부에 있어도 폼에 속하게 만든다.
+      </li>
+      <li>
+        list : &lt;datalist&gt; 요소의 id를 참조하여 입력 필드에 사전 정의된
+        옵션을 제공한다.
+      </li>
+      <li>pattern : 정규 표현식을 사용하여 입력 필드의 유효성을 검사한다.</li>
+      <li>
+        maxlength, minlength : 입력할 수 있는 문자의 최대/최소 길이를 지정한다.
+      </li>
+      <li>disabled : 폼 요소(버튼, 입력 필드 등)를 비활성화한다.</li>
+      <li>multiple : 여러 파일이나 항목을 선택할 수 있게 한다.</li>
+      <br />
+
+      <strong>멀티미디어 &lt;video&gt;, &lt;audio&gt;, &lt;track&gt; 등</strong>
+      <li>autoplay : 페이지 로드 시 자동으로 재생되도록 한다.</li>
+      <li>controls : 재생, 일시정지, 볼륨 조절 등 기본 제어판을 표시한다.</li>
+      <li>loop : 반복 재생을 설정한다.</li>
+      <li>muted : 음소거 상태로 시작한다.</li>
+      <li>poster : 동영상 재생 전 표시될 이미지를 지정한다.</li>
+      <li>preload : 미디어 파일의 사전 로딩 방식을 지정한다.</li>
+      <li>kind : &lt;track&gt; 요소의 종류(자막, 캡션, 설명 등)를 지정한다.</li>
+      <br />
+
+      <strong>테이블 &lt;table&gt;</strong>
+      <li>colspan : 셀이 차지할 열의 수를 지정한다.</li>
+      <li>rowspan : 셀이 차지할 행의 수를 지정한다.</li>
+      <li>
+        headers: &lt;th&gt; 요소의 id를 참조하여 데이터 셀(&lt;td&gt;)과 헤더 셀
+        간의 관계를 정의한다.
+      </li>
+    </ul>
   </body>
 </html>
