--- a/my-first-webpage/my-first-webpage_1.html
+++ b/my-first-webpage/my-first-webpage_1.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>수줍은 첫번째</title>
+    <link rel="stylesheet" href="./my-first-webpage_2.css" />
   </head>
   <body style="background-color: rgb(0, 170, 255, 25%); background-size: cover">
+    <section>
+      머리통
+      <article class="hair">
+        머리카락
+        <div class="hair_one">
+          <h2>
+            <span>1</span>
+            <span>2</span>
+          </h2>
+        </div>
+        <div class="hair_two">
+          <h2>정수리</h2>
+        </div>
+      </article>
+      <article>눈</article>
+      <article>입</article>
+    </section>
+
+    html h1,h5 span p css inline, inline-block, block
+
     <h1
+      class="h1"
       style="
         text-align: center;
         background-image: url('https://mblogthumb-phinf.pstatic.net/MjAyMjA5MDVfMjAz/MDAxNjYyMzE1MTEwODM2.-zc8Jw2FcR9yeKj3fZL9yTATgFpxvHcdZdRmpH6xn5sg.rUBvTd5grPsBJb2pS9hzfzmN_HWxBEe-jSXVyVrS_V4g.JPEG.ovo--vnv/France_cafe_background.jpeg?type=w800');
